--- a/index.html
+++ b/index.html
@@ -90,8 +90,22 @@
 <!-- CONTACT -->
 <section id="contact" class="section contact">
   <h2>Contact Us</h2>
+  <div class="contact-grid">
 
-  <form class="contact-form">
+  <div class="contact-card">
+    <h3>📞 Call Us</h3>
+    <a href="tel:9000611173">9000611173</a>
+  </div>
+
+  <div class="contact-card">
+    <h3>✉️ Email Us</h3>
+    <a href="mailto:cnvmurali@gmail.com">cnvmurali@gmail.com</a>
+  </div>
+
+</div>
+
+
+ <form class="contact-form">
     <input type="text" placeholder="Your Name" required>
     <input type="email" placeholder="Email" required>
     <textarea placeholder="Message"></textarea>
