--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 </div>
 
 
- <form class="contact-form">
+ <form action="https://formspree.io/f/xpqjqlae" method="POST" class="contact-form">
+
     <input type="text" placeholder="Your Name" required>
     <input type="email" placeholder="Email" required>
     <textarea placeholder="Message"></textarea>
