--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- NAVBAR -->
 <nav class="navbar">
-  <div class="logo">MASTER ROOFING</div>
+  <div class="logo">MASTER PEBs</div>
 
   <ul class="nav-links">
     <li><a href="#">Home</a></li>
@@ -38,7 +38,7 @@
 
 <!-- ABOUT -->
 <section id="about" class="section">
-  <h2>About Master Roofing</h2>
+  <h2>About Master PEBs</h2>
   <p>
     Since 2005, we have delivered high-quality GI/GL/BGL roofing sheets,
     industrial sheds and cladding systems with international standards
